[package]
name = "pbfextractor"
version = "0.1.1"
description = "Pbfextractor creates graph-files with multidimensional costs from osm-, pbf- and srtm-data"
edition = "2018"

authors = ["Florian Barth <florianbarth@gmx.de>"]
repository = "https://github.com/lesstat/pbfextractor"
readme = "README.md"
keywords = ["osm", "parsing", "text", "pbf", "xml"]
categories = ["algorithms", "data-structures", "parser-implementations", "parsing", ""]
license = "GPL"


[dependencies]
byteorder = "*"
clap = "2.33" # cmdline-parsing
env_logger = "0.6" # logging for external use, e.g. main.rs and examples
flate2 = "1"
log = "0.4" # logging for internal use, e.g. lib.rs
osmpbfreader = "0.13" # read osm.pbf-files
rand = "0.7" # generating random edge-weights
